[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/Game Stats/Status Effect Item.gd" type="Script" id=1]

[node name="StatusEffectItem" type="Control"]
rect_min_size = Vector2( 115, 50 )
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 115, 50 )
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="StatusEffectContainer" type="HBoxContainer" parent="."]
margin_right = 116.0
margin_bottom = 23.0
rect_min_size = Vector2( 116, 50 )

[node name="StatusEffectText" type="RichTextLabel" parent="StatusEffectContainer"]
margin_top = 17.0
margin_right = 79.0
margin_bottom = 32.0
rect_min_size = Vector2( 79, 0 )
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 4
bbcode_enabled = true
fit_content_height = true

[node name="StatusEffectIcon" type="TextureRect" parent="StatusEffectContainer"]
margin_left = 83.0
margin_right = 115.0
margin_bottom = 50.0
rect_min_size = Vector2( 32, 50 )
stretch_mode = 6
